<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/lblVariable1"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:textSize="20sp"
                android:text="@string/enter_a_noun" />
            <EditText
                android:id="@+id/txtNoun"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text=""
                android:hint="@string/noun"/>
        </LinearLayout>
        <Button
            android:layout_width="60dp"
            android:layout_height="45dp"
            android:text="@string/go"
            android:layout_gravity="bottom"
            android:layout_marginStart="12dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/lblVariable2"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:textSize="20sp"
                android:text="@string/enter_a_plural_noun" />
            <EditText
                android:id="@+id/txtPluralNoun1"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text=""
                android:hint="@string/noun"/>
        </LinearLayout>
        <Button
            android:layout_width="60dp"
            android:layout_height="45dp"
            android:text="@string/go"
            android:layout_gravity="bottom"
            android:layout_marginStart="12dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/lblVariable3"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:textSize="20sp"
                android:text="@string/enter_a_verb_present_tense" />
            <EditText
                android:id="@+id/txtVerbPresent"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text=""
                android:hint="@string/verb"/>
        </LinearLayout>
        <Button
            android:layout_width="60dp"
            android:layout_height="45dp"
            android:text="@string/go"
            android:layout_gravity="bottom"
            android:layout_marginStart="12dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/lblVariable4"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:textSize="20sp"
                android:text="@string/enter_a_verb_present_tense" />
            <EditText
                android:id="@+id/txtVerbPresent2"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text=""
                android:hint="@string/verb"/>
        </LinearLayout>
        <Button
            android:layout_width="60dp"
            android:layout_height="45dp"
            android:text="@string/go"
            android:layout_gravity="bottom"
            android:layout_marginStart="12dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/lblVariable5"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:textSize="20sp"
                android:text="@string/enter_a_part_of_the_body" />
            <EditText
                android:id="@+id/txtPartOfBody"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text=""
                android:hint="@string/body_part"/>
        </LinearLayout>
        <Button
            android:layout_width="60dp"
            android:layout_height="45dp"
            android:text="@string/go"
            android:layout_gravity="bottom"
            android:layout_marginStart="12dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/lblVariable6"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:textSize="20sp"
                android:text="@string/enter_an_adjective" />
            <EditText
                android:id="@+id/txtAdjective1"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text=""
                android:hint="@string/adjective"/>
        </LinearLayout>
        <Button
            android:layout_width="60dp"
            android:layout_height="45dp"
            android:text="@string/go"
            android:layout_gravity="bottom"
            android:layout_marginStart="12dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/lblVariable7"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:textSize="20sp"
                android:text="@string/enter_a_plural_noun" />
            <EditText
                android:id="@+id/txtPluralNoun2"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text=""
                android:hint="@string/noun"/>
        </LinearLayout>
        <Button
            android:layout_width="60dp"
            android:layout_height="45dp"
            android:text="@string/go"
            android:layout_gravity="bottom"
            android:layout_marginStart="12dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/lblVariable8"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:textSize="20sp"
                android:text="@string/enter_an_adjective" />
            <EditText
                android:id="@+id/txtAdjective2"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text=""
                android:hint="@string/adjective"/>
        </LinearLayout>
        <Button
            android:layout_width="60dp"
            android:layout_height="45dp"
            android:text="@string/go"
            android:layout_gravity="bottom"
            android:layout_marginStart="12dp"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/txtContent"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="" />
    </ScrollView>
</LinearLayout>